Thu Jun 21 06:21:54 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_execarg_fixup): take a VALUE argument instead of
	  struct rb_execarg.

	* internal.h (rb_execarg_fixup): follow the definition change.

	* io.c (pipe_open): follow rb_execarg_fixup change.

	* ext/pty/pty.c (establishShell): ditto.

Wed Jun 20 21:25:37 2012  Tanaka Akira  <akr@fsij.org>

	* internal.h (struct rb_execarg): add umask_given and umask_mask
	  fields.

	* process.c (STATIC_ASSERT): removed.
	  (rb_execarg_addopt): follow the rb_execarg change.
	  (rb_execarg_run_options): ditto.

Wed Jun 20 20:38:23 2012  Tanaka Akira  <akr@fsij.org>

	* internal.h (struct rb_execarg) moved and renamed from
	  struct rb_exec_arg in intern.h.

	* include/ruby/intern.h (struct rb_exec_arg): refer Data object which
	  contains struct rb_execarg.

	* process.c: use struct rb_execarg instead of struct rb_exec_arg
	  except functions declared in intern.h.
	  (rb_exec_arg_addopt): extract a pointer to struct rb_execarg from
	  struct rb_exec_arg.
	  (rb_exec_arg_init): ditto.
	  (rb_exec_arg_fixup): ditto.
	  (rb_run_exec_options_err): ditto.
	  (rb_run_exec_options): ditto.
	  (rb_exec_err): ditto.
	  (rb_exec): ditto.

	* io.c: use struct rb_execarg instead of struct rb_exec_arg.

	* ext/pty/pty.c: ditto.

Wed Jun 20 19:13:25 2012  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_new): declared.
	  (rb_execarg_get): ditto.

	* process.c (mark_exec_arg): new function.
	  (free_exec_arg): ditto.
	  (memsize_exec_arg): ditto.
	  (exec_arg_data_type): defined.
	  (rb_execarg_new): new function.
	  (rb_execarg_get): ditto.
	  (rb_f_exec): use rb_execarg_new.
	  (rb_spawn_internal): ditto.
	  (rb_f_spawn): ditto.

	* io.c (pipe_open_v): use rb_execarg_new.
	  (pipe_open_s): ditto.

	* ext/pty/pty.c (establishShell): use rb_execarg_new.

Wed Jun 20 16:36:14 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/setproctitle.c (environ): use (*_NSGetEnviron()) instead of